--- a/index.html
+++ b/index.html
@@ -1,1 +1,41 @@
-Hello World
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>RR23</title>
+    <link href="assets/stylesheets/rr.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@200;500;900&display=swap" rel="stylesheet">
+    <script src="assets/javascripts/colour.js" defer=""></script>
+  </head>
+  <body class="home">
+    <h1 id="colour-me-baby">Richmond<br>Roulette<br>23</h1>
+
+    <div class="details-container">
+      <div class="details">
+      <div class="what">
+        <h2>4-10 February 2023</h2>
+
+        <p class="the-big-sell">
+          Biggish day trips into the beautiful Richmond Ranges.<br>
+          With bicycles.<br>
+          For seven days *.<br>
+          100% social.<br>
+          100% adventure.<br>
+          80% fun.<br>
+        </p>
+
+        <em>
+          * Are you beech forest curious?
+          Toe-dipping is encouraged.
+          Come for a day, or three, or the full seven, or have rest days, whatever :)
+        </em>
+      </div>
+
+      <div class="links">
+        <a href="how.html">How it works</a> | <a href="who.html">Heroes</a> | <a href="https://forms.gle/NJNJAzXzBi18NLyf9" target="_blank" rel="noopener">Register</a>
+      </div>
+    </div>
+  </div>
+  </body>
+</html>
