--- a/how.html
+++ b/how.html
@@ -49,8 +49,7 @@
       The pace is usually pretty casual but the hills are big so we will get spread out.
       Expect to be out in the forest for 5 to 7 hours each day.
       Going up we will typically splinter into smaller groups but regroup a few times like lunch or at the top.
-      Not all tops are summits, but all summits are tops!
-      Eh what?!
+      Not all tops are summits, but all summits are tops, eh what?!
       Sometimes we'll ditch bikes at the obvious ditch bikes spot and walk the last bit to the top for views and completist satisfaction ✅
     </p>
 
