--- a/how.html
+++ b/how.html
@@ -3,6 +3,7 @@
   <head>
     <title>RR23</title>
     <link href="assets/stylesheets/rr.css" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="assets/images/favicon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@200;500;900&display=swap" rel="stylesheet">
@@ -126,7 +127,7 @@
     <p>
       Aaaactually every one of those sentences is the opposite.
       There have been serious injuries.
-      This is remote-ish territory and rescue can be very difficult.
+      This is remote-ish territory and rescue can be difficult.
       Some of the trails have very technical sections.
       Some sections no-one will ride.
       That's ok.
@@ -140,5 +141,14 @@
       A waterproof jacket is probably the most important piece of safety kit in the high country.
       Waterproof pants are good too.
     </p>
+
+    <div class="links">
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li class="active">How it works</li>
+        <li><a href="who.html">Heroes</a></li>
+        <li><a href="https://forms.gle/NJNJAzXzBi18NLyf9" target="_blank" rel="noopener">Register</a></li>
+      </ul>
+    </div>
   </body>
 </html>
