--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>RR23</title>
     <link href="assets/stylesheets/rr.css" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="assets/images/favicon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@200;500;900&display=swap" rel="stylesheet">
@@ -13,29 +14,34 @@
 
     <div class="details-container">
       <div class="details">
-      <div class="what">
-        <h2>4-10 February 2023</h2>
+        <div class="what">
+          <h2>4-10 February 2023 ➪ <a href="https://forms.gle/NJNJAzXzBi18NLyf9" target="_blank" rel="noopener">Register</a></h2>
 
-        <p class="the-big-sell">
-          Biggish day trips into the beautiful Richmond Ranges.<br>
-          With bicycles.<br>
-          For seven days *.<br>
-          100% social.<br>
-          100% adventure.<br>
-          80% fun.<br>
-        </p>
+          <ul class="boring">
+            <li>Biggish day trips into the beautiful Richmond Ranges.</li>
+            <li>With bicycles.</li>
+            <li>For seven days *.</li>
+            <li>100% social.</li>
+            <li>100% adventure.</li>
+            <li>80% fun.</li>
+          </ul>
 
-        <em>
-          * Are you beech forest curious?
-          Toe-dipping is encouraged.
-          Come for a day, or three, or the full seven, or have rest days, whatever :)
-        </em>
-      </div>
-
-      <div class="links">
-        <a href="how.html">How it works</a> | <a href="who.html">Heroes</a> | <a href="https://forms.gle/NJNJAzXzBi18NLyf9" target="_blank" rel="noopener">Register</a>
+          <em>
+            * Are you beech forest curious?
+            Toe-dipping is ok.
+            Come for a day, or three, or the full seven, or have rest days, whatever :)
+          </em>
+        </div>
       </div>
     </div>
-  </div>
+
+    <div class="links">
+      <ul>
+        <li class="active">Home</li>
+        <li><a href="how.html">How it works</a></li>
+        <li><a href="who.html">Heroes</a></li>
+        <li><a href="https://forms.gle/NJNJAzXzBi18NLyf9" target="_blank" rel="noopener">Register</a></li>
+      </ul>
+    </div>
   </body>
 </html>
