--- a/how.html
+++ b/how.html
@@ -15,7 +15,7 @@
 
     <p>
       We will be based at Doc's Onamalutu campground.
-      This is a huge grassy paddock surrounded by trees and a modest river.
+      This is a large grassy paddock surrounded by trees and a modest river.
       There are flush toilets and a "please boil" water supply.
       Pretty swish.
       Bring your favourite tent/car camping setup.
@@ -31,9 +31,9 @@
     </p>
 
     <p>
-      We will generally roll out of camp by 9am but a couple of days we'll go a bit earlier when there's more admin.
-      There are two days we'll ride from camp but otherwise we will drive/car pool.
-      Also two days will require some extra shuttle logistics but we'll discuss that the night before.
+      We roll out of camp by 9am each day, sometimes a little earlier when there's more admin.
+      There are two days we ride from camp but otherwise we will drive/car pool.
+      Two days will require some extra shuttle logistics but we'll discuss that the night before.
     </p>
 
     <p>
@@ -43,15 +43,15 @@
     <p>
       You do your own food.
       Bring snacks and lunch for out on the trail, and plan for dinner back at base camp.
-      You might also want to bring salty snacks and a victory beer to stash in a creek at the road end.
+      You might also want to bring salty yums and a victory beer to stash in a creek at the road end.
     </p>
 
     <p>
       The pace is usually pretty casual but the hills are big so we will get spread out.
       Expect to be out in the forest for 5 to 7 hours each day.
-      Going up we will typically splinter into smaller groups but regroup a few times like lunch or at the top.
+      Going up we will typically splinter into smaller groups and regroup a few times like lunch or at the top.
       Not all tops are summits, but all summits are tops, eh what?!
-      Sometimes we'll ditch bikes at the obvious ditch bikes spot and walk the last bit to the top for views and completist satisfaction ✅
+      Sometimes we'll leave bikes at the obvious leave bikes spot and walk the last bit to the top for views and completist satisfaction ✅
     </p>
 
     <p>
@@ -59,7 +59,7 @@
     </p>
 
     <p>
-      There are glorious rivers most days to swim in and freshen up, or the stream back at camp should help keep the stinkies at bay.
+      There are glorious rivers most days to swim in and freshen up, or the stream back at camp to keep the stinkies at bay.
       There is no hot water unless someone brings a portable jacuzzi.
       Actually that would be ace, thanks friend!
     </p>
@@ -77,7 +77,7 @@
 
     <p>
       Payment for the helicopter is usually cash only and will be $150-$200 per person depending on numbers.
-      If that's a bit rich there is the option to self propel from bottom to meet the rest of us.
+      If that's a bit spendy you can self-propel from the bottom to meet the rest of us.
       No judgement, it will still be a good adventure.
     </p>
 
@@ -85,7 +85,7 @@
 
     <p>
       All the trails this year are within the Mount Richmond Forest Park.
-      The hills are steep and rocky and mostly covered in beech trees with exposed summits around the 1500m mark in the alpine.
+      The hills are steep and rocky and mostly covered in beech trees with exposed summits in the alpine at around the 1500m mark.
       Base camp is at 100m, you can work out the difference.
       Trails are mostly knobbly old walking tracks stacked with grade 4/5/6 sections.
       Walking some sections is sensible and encouraged, see the safety note below...
