--- a/who.html
+++ b/who.html
@@ -1,1 +1,23 @@
-👀
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>RR23</title>
+    <link href="assets/stylesheets/rr.css" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="assets/images/favicon.png">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@200;500;900&display=swap" rel="stylesheet">
+  </head>
+  <body>
+    👀
+    <div class="links">
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="how.html">How it works</a></li>
+        <li class="active">Heroes</li>
+        <li><a href="https://forms.gle/NJNJAzXzBi18NLyf9" target="_blank" rel="noopener">Register</a></li>
+      </ul>
+    </div>
+  </body>
+</html>
+
