--- a/how.html
+++ b/how.html
@@ -8,19 +8,19 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@200;500;900&display=swap" rel="stylesheet">
   </head>
-  <body>
+  <body class="how">
     <h2>How it works</h2>
 
     <h3>Base camp ⛺️</h3>
 
     <p>
       We will be based at Doc's Onamalutu campground.
-      This is a large grassy paddock surrounded by trees and a modest river.
+      This is a large grassy field surrounded by trees and a modest river.
       There are flush toilets and a "please boil" water supply.
       Pretty swish.
       Bring your favourite tent/car camping setup.
-      Camping costs $10 per person per night and there will probably be a campground host to collect your cash and leave passive aggressive notes about noodles in the outdoor sink.
-      No fires and no dogs sorry.
+      Camping costs $10 per person per night, and there will likely be a campground host to collect your cash and leave passive-aggressive notes about noodles in the outdoor sink.
+      No fires and no dogs, sorry.
       There is no cell service at camp but every day we will be either up a hill or passing through girlfriend/boyfriend corner.
     </p>
 
@@ -33,11 +33,11 @@
     <p>
       We roll out of camp by 9am each day, sometimes a little earlier when there's more admin.
       There are two days we ride from camp but otherwise we will drive/car pool.
-      Two days will require some extra shuttle logistics but we'll discuss that the night before.
+      Two days will require some extra shuttle logistics, but we'll discuss that the night before.
     </p>
 
     <p>
-      Plan to be self sufficient or buddy up for food, spares, camping, and safety equipment.
+      Plan to be self-sufficient or buddy up for food, spares, camping, and safety equipment.
     </p>
 
     <p>
@@ -51,17 +51,17 @@
       Expect to be out in the forest for 5 to 7 hours each day.
       Going up we will typically splinter into smaller groups and regroup a few times like lunch or at the top.
       Not all tops are summits, but all summits are tops, eh what?!
-      Sometimes we'll leave bikes at the obvious leave bikes spot and walk the last bit to the top for views and completist satisfaction ✅
+      Sometimes we'll leave bikes at the obvious spot and walk the last bit to the top for views and completist satisfaction ✅
     </p>
 
     <p>
-      Tuesday night is taco night (obviously) so bring your best Mexican-themed camping food, drinks, and attire.
+      Tuesday night is taco night (obviously), so bring your best Mexican-themed camping food, drinks, and attire.
     </p>
 
     <p>
       There are glorious rivers most days to swim in and freshen up, or the stream back at camp to keep the stinkies at bay.
       There is no hot water unless someone brings a portable jacuzzi.
-      Actually that would be ace, thanks friend!
+      Actually, that would be ace, thanks friend!
     </p>
 
     <h3>Heli day</h3>
@@ -76,18 +76,18 @@
     </p>
 
     <p>
-      Payment for the helicopter is usually cash only and will be $150-$200 per person depending on numbers.
-      If that's a bit spendy you can self-propel from the bottom to meet the rest of us.
+      Payment for the helicopter is usually cash only and costs $150-$200 per person depending on numbers.
+      If that's a bit spendy, you can self-propel from the bottom to meet the rest of us.
       No judgement, it will still be a good adventure.
     </p>
 
-    <h3>The trails (and terrain)</h3>
+    <h3>The trails (and terrain) ⛰</h3>
 
     <p>
-      All the trails this year are within the Mount Richmond Forest Park.
-      The hills are steep and rocky and mostly covered in beech trees with exposed summits in the alpine at around the 1500m mark.
+      This year, all trails are within the Mount Richmond Forest Park.
+      The hills are steep and rocky and mostly covered in beech trees, with exposed summits in the alpine at around the 1500m mark.
       Base camp is at 100m, you can work out the difference.
-      Trails are mostly knobbly old walking tracks stacked with grade 4/5/6 sections.
+      The trails are mostly janky old walking tracks stacked with grade 4/5/6 sections.
       Walking some sections is sensible and encouraged, see the safety note below...
     </p>
 
@@ -113,19 +113,19 @@
       No Nelson visits this year.
     </p>
 
-    <h3>Safety</h3>
+    <h3>Safety ⛑</h3>
 
     <p>
-      Nothing has ever gone wrong at Richmond Roulette.
-      Over the years we have not had multiple fractures or dislocations.
-      We have never had any concussions.
-      We have not had multiple emergency helicopter evacuations.
-      The rivers have never risen and blocked our route.
-      No-one has been stung by wasps or drained of their blood by sand flies.
+      ☝️ Nothing has ever gone wrong at Richmond Roulette.<br>
+      🦴 Over the years we have not had multiple fractures or dislocations.<br>
+      🧠 We have never had any concussions.<br>
+      🚁 We have not had multiple emergency helicopter evacuations.<br>
+      🌊 The rivers have never risen and blocked our route.<br>
+      🐝 No-one has been stung by wasps or drained of their blood by sand flies.<br>
     </p>
 
     <p>
-      Aaaactually every one of those sentences is the opposite.
+      Aaaactually every one of those facts is the opposite.
       There have been serious injuries.
       This is remote-ish territory and rescue can be difficult.
       Some of the trails have very technical sections.
@@ -136,7 +136,7 @@
 
     <p>
       Our biggest hazards are gravity and the weather.
-      Do bring some first aid gear.
+      Do bring some first-aid gear.
       Between us all we will have various first aid kits, first aid experience, and a few PLBs.
       A waterproof jacket is probably the most important piece of safety kit in the high country.
       Waterproof pants are good too.
