--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="details-container">
       <div class="details">
         <div class="what">
-          <h2>4-10 February 2023 ➪ <a href="https://forms.gle/NJNJAzXzBi18NLyf9" target="_blank" rel="noopener">Register</a></h2>
+          <h2 class="register"><div>4-10 February 2023</div><div>➪ <a href="https://forms.gle/NJNJAzXzBi18NLyf9" target="_blank" rel="noopener">Register</a></div></h2>
 
           <ul class="boring">
             <li>Biggish day trips into the beautiful Richmond Ranges.</li>
