--- a/who.html
+++ b/who.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@200;500;900&display=swap" rel="stylesheet">
   </head>
-  <body>
+  <body class="who">
     👀
     <div class="links">
       <ul>
