--- a/how.html
+++ b/how.html
@@ -19,7 +19,7 @@
       There are flush toilets and a "please boil" water supply.
       Pretty swish.
       Bring your favourite tent/car camping setup.
-      Camping costs $10 per person per night, and there will likely be a campground host to collect your cash and leave passive-aggressive notes about noodles in the outdoor sink.
+      Camping costs $10 per person per night, and there will likely be a Doc campground host to collect your cash and leave passive-aggressive notes about noodles in the outdoor sink.
       No fires and no dogs, sorry.
       There is no cell service at camp but every day we will be either up a hill or passing through girlfriend/boyfriend corner.
     </p>
@@ -115,14 +115,12 @@
 
     <h3>Safety ⛑</h3>
 
-    <p>
-      ☝️ Nothing has ever gone wrong at Richmond Roulette.<br>
-      🦴 Over the years we have not had multiple fractures or dislocations.<br>
-      🧠 We have never had any concussions.<br>
-      🚁 We have not had multiple emergency helicopter evacuations.<br>
-      🌊 The rivers have never risen and blocked our route.<br>
-      🐝 No-one has been stung by wasps or drained of their blood by sand flies.<br>
-    </p>
+    <p class="indent">☝️ Nothing has ever gone wrong at Richmond Roulette.</p>
+    <p class="indent">🦴 Over the years we have not had multiple fractures or dislocations.</p>
+    <p class="indent">🧠 We have never had any concussions.</p>
+    <p class="indent">🚁 We have not had multiple emergency helicopter rescues.</p>
+    <p class="indent">🌊 The rivers have never risen and blocked our route.</p>
+    <p class="indent">🐝 No-one has been stung by wasps or drained of their blood by sand flies.</p>
 
     <p>
       Aaaactually every one of those facts is the opposite.
@@ -137,7 +135,7 @@
     <p>
       Our biggest hazards are gravity and the weather.
       Do bring some first-aid gear.
-      Between us all we will have various first aid kits, first aid experience, and a few PLBs.
+      Being self-sufficient is good but between us all we will have various first aid kits, first aid experience, and a few PLBs.
       A waterproof jacket is probably the most important piece of safety kit in the high country.
       Waterproof pants are good too.
     </p>
