--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@200;500;900&display=swap" rel="stylesheet">
-    <script src="assets/javascripts/colour.js" defer=""></script>
+    <script type="text/javascript" src="assets/javascripts/colour.js"></script>
   </head>
   <body class="home">
     <h1 id="colour-me-baby">Richmond<br>Roulette<br>23</h1>
@@ -15,17 +15,16 @@
     <div class="details-container">
       <div class="details">
         <div class="what">
-          <h2 class="register"><div>4-10 February 2023</div><div>➪ <a href="https://forms.gle/NJNJAzXzBi18NLyf9" target="_blank" rel="noopener">Register</a></div></h2>
-
-          <ul class="boring">
-            <li>Biggish day trips into the beautiful Richmond Ranges.</li>
-            <li>With bicycles.</li>
-            <li>For seven days *.</li>
-            <li>100% social.</li>
-            <li>100% adventure.</li>
-            <li>80% fun.</li>
-          </ul>
-
+          <h2 class="register"><div>4-10 Feb<span class="hide-small">ruary</span> 2023</div><div>➪ <a href="https://forms.gle/NJNJAzXzBi18NLyf9" target="_blank" rel="noopener">Register</a></div></h2>
+          <p>
+            Biggish day trips into the beautiful Richmond Ranges.
+            With niche humans.
+            And bicycles.
+            For seven days *.
+            100% social.
+            100% adventure.
+            80% fun.
+          </p>
           <em>
             * Are you beech forest curious?
             Toe-dipping is ok.
