Better (?) media queries

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="details-container">
       <div class="details">
         <div class="what">
-          <h2 class="register"><div>4-10 Feb<span class="hide-small">ruary</span> 2023</div><div>➪ <a href="https://forms.gle/NJNJAzXzBi18NLyf9" target="_blank" rel="noopener">Register</a></div></h2>
+          <h2 class="register"><div>4-10 Feb<span class="hide-small">ruary</span> 2023</div><div><span class="hide-small">➪ </span><a href="https://forms.gle/NJNJAzXzBi18NLyf9" target="_blank" rel="noopener">Register</a></div></h2>
           <p>
             Biggish day trips into the beautiful Richmond Ranges.
             With niche humans.
