--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@200;500;900&display=swap" rel="stylesheet">
     <script type="text/javascript" src="assets/javascripts/colour.js"></script>
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
   </head>
   <body class="home">
     <h1 id="colour-me-baby">Richmond<br>Roulette<br>23</h1>
