--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@200;500;900&display=swap" rel="stylesheet">
     <script type="text/javascript" src="assets/javascripts/colour.js"></script>
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="viewport" content="width=device-width,initial-scale=0.8">
   </head>
   <body class="home">
     <h1 id="colour-me-baby">Richmond<br>Roulette<br>23</h1>
@@ -16,7 +16,10 @@
     <div class="details-container">
       <div class="details">
         <div class="what">
-          <h2 class="register"><div>4-10 Feb<span class="hide-small">ruary</span> 2023</div><div><span class="hide-small">➪ </span><a href="https://forms.gle/NJNJAzXzBi18NLyf9" target="_blank" rel="noopener">Register</a></div></h2>
+          <h2 class="register">
+            <div class="nowrap">4-10 Feb<span class="hide-small">ruary</span> <span class="hide-small">20</span>23</div>
+            <div class="nowrap ml-auto">➪ <a href="https://forms.gle/NJNJAzXzBi18NLyf9" target="_blank" rel="noopener">Register</a></div>
+          </h2>
           <p>
             Biggish day trips into the beautiful Richmond Ranges.
             With niche humans.
@@ -26,7 +29,10 @@
             100% adventure.
             80% fun.
           </p>
-          <em>
+          <em class="show-small">
+            * or fewer :)
+          </em>
+          <em class="hide-small">
             * Are you beech forest curious?
             Toe-dipping is ok.
             Come for a day, or three, or the full seven, or have rest days, whatever :)
