--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <meta name="viewport" content="width=device-width,initial-scale=0.8">
   </head>
   <body class="home">
+    <img src="assets/images/logo.png" class="logo">
+
     <h1 id="colour-me-baby">Richmond<br>Roulette<br>23</h1>
 
     <div class="details-container">
@@ -30,7 +32,7 @@
             80% fun.
           </p>
           <em class="show-small">
-            * or fewer :)
+            * or fewer,  your call :)
           </em>
           <em class="hide-small">
             * Are you beech forest curious?
