--- a/how.html
+++ b/how.html
@@ -147,6 +147,14 @@
       Waterproof pants are good too.
     </p>
 
+    <h3>Un/social media</h3>
+
+    <p>
+      <p class="indent">📺 <a href="https://www.instagram.com/richmond_roulette">Richmond Roulette</a></p>
+      <p class="indent">⚡️ <a href="https://spokemagazine.com/story-the-richmond-roulette">Spoke Magazine</a></p>
+      <p class="indent">😬 <a href="https://www.helirescue.co.nz">Nelson Marlborough Rescue Helicopter Trust</a> (<a href="https://www.helirescue.co.nz/donate/">Donate!</a>)</p>
+    </p>
+
     <div class="links">
       <ul>
         <li><a href="index.html">Home</a></li>
