--- a/who.html
+++ b/who.html
@@ -8,9 +8,152 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@200;500;900&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
+    <script src="assets/javascripts/sss/sss.min.js"></script>
+    <link rel="stylesheet" href="assets/stylesheets/sss/sss.css" type="text/css" media="all">
+    <script>jQuery(function($) {$('.slider').sss();});</script>
   </head>
   <body class="who">
-    👀
+    <h2>Last years MVPs (mentally variable people)</h2>
+
+    <div class="slider">
+      <div class="hero">
+        <img src="assets/images/cruft/choppa-saveus.jpg">
+        <div class="words">
+          <div class="name">Ant</div>
+          <div class="quote">I'm not tired, you're tired.</div>
+          <div class="link"><a href="https://www.instagram.com/rantgreen">@rantgreen</a></div>
+        </div>
+      </div>
+
+      <div class="hero">
+        <img src="assets/images/cruft/emma.jpg">
+        <div class="words">
+          <div class="name">Emma</div>
+          <div class="quote">Yes, you're all going to the top with me.</div>
+          <div class="link"><a href="https://www.instagram.com/em_b8up">@em_b8up</a></div>
+        </div>
+      </div>
+
+      <div class="hero">
+        <img src="assets/images/cruft/duppy.jpg">
+        <div class="words">
+          <div class="name">Harrison</div>
+          <div class="quote">My tent is supposed to look like that.</div>
+          <div class="link"><a href="https://www.instagram.com/redshaharr">@redshaharr</a></div>
+        </div>
+      </div>
+
+      <div class="hero">
+        <img src="assets/images/cruft/jak.jpg">
+        <div class="words">
+          <div class="name">Jak</div>
+          <div class="quote">Is this the top?</div>
+          <div class="link"><a href="https://www.instagram.com/jakbrightwell">@jakbrightwell</a></div>
+        </div>
+      </div>
+
+      <div class="hero">
+        <img src="assets/images/cruft/jake.jpg">
+        <div class="words">
+          <div class="name">Jake</div>
+          <div class="quote">Seumus' Irish Bar is the best Irish bar in Wellington in Picton.</div>
+          <div class="link"><a href="https://www.instagram.com/chewiehood">@chewiehood</a></div>
+        </div>
+      </div>
+
+      <div class="hero">
+        <img src="assets/images/cruft/jonny.jpg">
+        <div class="words">
+          <div class="name">Jonny</div>
+          <div class="quote">Ooh, I wonder where that track goes?</div>
+          <div class="link"><a href="https://www.instagram.com/cmonkey">@cmonkey</a></div>
+        </div>
+      </div>
+
+      <div class="hero">
+        <img src="assets/images/cruft/on-the-gram.jpg">
+        <div class="words">
+          <div class="name">Justin</div>
+          <div class="quote">This isn't my bike, I'm just testing it.</div>
+          <div class="link"><a href="https://www.instagram.com/justinhenehan">@justinhenehan</a></div>
+        </div>
+      </div>
+
+      <div class="hero">
+        <img src="assets/images/cruft/grass.jpg">
+        <div class="words">
+          <div class="name">Koen</div>
+          <div class="quote">I cut my hair for this event, you should appreciate it more.</div>
+          <div class="link"><a href="https://www.instagram.com/grevenkoen">@grevenkoen</a></div>
+        </div>
+      </div>
+
+      <div class="hero">
+        <img src="assets/images/cruft/horsemen.jpg">
+        <div class="words">
+          <div class="name">Lewis</div>
+          <div class="quote">Not really rain, more like fat mist.</div>
+          <div class="link"><a href="https://www.instagram.com/lewiferri">@lewiferri</a></div>
+        </div>
+      </div>
+
+      <div class="hero">
+        <img src="assets/images/cruft/luke.jpg">
+        <div class="words">
+          <div class="name">Luke</div>
+          <div class="quote">Do you think I should I take knee pads?</div>
+          <div class="link"><a href="https://www.instagram.com/luke_vanderveen">@luke_vanderveen</a></div>
+        </div>
+      </div>
+
+      <div class="hero">
+        <img src="assets/images/cruft/choppa-goodun.jpg">
+        <div class="words">
+          <div class="name">Matt</div>
+          <div class="quote">Big job.</div>
+          <div class="link"><a href="https://www.instagram.com/chopsridesbikes">@chopsridesbikes</a></div>
+        </div>
+      </div>
+
+      <div class="hero">
+        <img src="assets/images/cruft/rhys.jpg">
+        <div class="words">
+          <div class="name">Rhys</div>
+          <div class="quote">Is it straight?</div>
+          <div class="link"><a href="https://www.instagram.com/weakhunt500">@weakhunt500</a></div>
+        </div>
+      </div>
+
+      <div class="hero">
+        <img src="assets/images/cruft/tom-a.jpg">
+        <div class="words">
+          <div class="name">Tom A</div>
+          <div class="quote">This milk will be fine.</div>
+          <div class="link"><a href="https://www.instagram.com/timtamgram1">@timtamgram1</a></div>
+        </div>
+      </div>
+
+      <div class="hero">
+        <img src="assets/images/cruft/tom-c.jpg">
+        <div class="words">
+          <div class="name">Tom C</div>
+          <div class="quote">Fuuun!</div>
+          <div class="link"><a href="https://www.instagram.com/thomascappleman">@thomascappleman</a></div>
+        </div>
+      </div>
+
+      <div class="hero">
+        <img src="assets/images/cruft/toady.jpg">
+        <div class="words">
+          <div class="name">Tony</div>
+          <div class="quote">I'm not selling tacos, that's not even funny Luke.</div>
+          <div class="link"><a href="https://www.instagram.com/tohalloran">@tohalloran</a></div>
+        </div>
+      </div>
+    </div>
+
     <div class="links">
       <ul>
         <li><a href="index.html">Home</a></li>
@@ -21,4 +164,3 @@
     </div>
   </body>
 </html>
-
