Polishing the turd

--- a/how.html
+++ b/how.html
@@ -130,7 +130,7 @@
     <p class="indent">🐝 No-one has been stung by wasps or drained of their blood by sand flies.</p>
 
     <p>
-      Aaaactually every one of those facts is the opposite.
+      Aaaactually every one of those facts is incorrect.
       There have been serious injuries.
       This is remote-ish territory and rescue can be difficult.
       Some of the trails have very technical sections.
