--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
             Biggish day trips into the beautiful Richmond Ranges.
             With niche humans.
             And bicycles.
-            For seven days *.
+            For seven days *.<br>
             100% social.
             100% adventure.
             80% fun.
           </p>
           <em class="show-small">
-            * or fewer,  your call :)
+            * or fewer, your call :)
           </em>
           <em class="hide-small">
             * Are you beech forest curious?
