You missed it silly billy

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="what">
           <h2 class="register">
             <div class="nowrap">4-10 Feb<span class="hide-small">ruary</span> <span class="hide-small">20</span>23</div>
-            <div class="nowrap ml-auto">➪ <a href="https://forms.gle/NJNJAzXzBi18NLyf9" target="_blank" rel="noopener">Register</a></div>
+            <div class="nowrap ml-auto">➪ <a href="index.html">Register</a></div>
           </h2>
           <p>
             Biggish day trips into the beautiful Richmond Ranges.
@@ -48,7 +48,7 @@
         <li class="active">Home</li>
         <li><a href="how.html">How it works</a></li>
         <li><a href="who.html">Heroes</a></li>
-        <li><a href="https://forms.gle/NJNJAzXzBi18NLyf9" target="_blank" rel="noopener">Register</a></li>
+        <li><a href="index.html">Register</a></li>
       </ul>
     </div>
   </body>
