--- a/how.html
+++ b/how.html
@@ -160,7 +160,7 @@
         <li><a href="index.html">Home</a></li>
         <li class="active">How it works</li>
         <li><a href="who.html">Heroes</a></li>
-        <li><a href="https://forms.gle/NJNJAzXzBi18NLyf9" target="_blank" rel="noopener">Register</a></li>
+        <li><a href="index.html">Register</a></li>
       </ul>
     </div>
   </body>
