--- a/who.html
+++ b/who.html
@@ -173,7 +173,7 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="how.html">How it works</a></li>
         <li class="active">Heroes</li>
-        <li><a href="https://forms.gle/NJNJAzXzBi18NLyf9" target="_blank" rel="noopener">Register</a></li>
+        <li><a href="index.html">Register</a></li>
       </ul>
     </div>
   </body>
