Updates for 2024, let's go!

--- a/how.html
+++ b/how.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>RR23</title>
+    <title>RR24</title>
     <link href="assets/stylesheets/rr.css" rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="assets/images/favicon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -15,7 +15,7 @@
     <h3>Base camp ⛺️</h3>
 
     <p>
-      We will be based at Doc's Onamalutu campground.
+      We will be based at Doc's <a href="https://www.doc.govt.nz/parks-and-recreation/places-to-go/marlborough/places/mount-richmond-forest-park/things-to-do/campsites/onamalutu-campsite/" target="_blank">Onamalutu campsite</a>.
       This is a large grassy field surrounded by trees and a modest river.
       There are flush toilets and a "please boil" water supply.
       Pretty swish.
@@ -39,8 +39,8 @@
 
     <p>
       We roll out of camp by 9am each day, sometimes a little earlier when there's more admin.
-      There are two days we ride from camp but otherwise we will drive/car pool.
-      Two days will require some extra shuttle logistics, but we'll discuss that the night before.
+      Some days we ride from camp but otherwise we will drive/car pool.
+      Some days will require some extra shuttle logistics, but we'll discuss that the night before.
     </p>
 
     <p>
@@ -62,7 +62,7 @@
     </p>
 
     <p>
-      Tuesday night is taco night (obviously), so bring your best Mexican-themed camping food, drinks, and attire.
+      <s>Tuesday night is taco night (obviously), so bring your best Mexican-themed camping food, drinks, and attire.</s> - sorry no Tuesdays this year, and after the incident last year that's probably just as well.
     </p>
 
     <p>
@@ -74,7 +74,7 @@
     <h3>Heli day</h3>
 
     <p>
-      Wednesday (Thursday backup) will be helicopter day 🚁
+      Friday (Saturday backup) will be helicopter day 🚁
     </p>
 
     <p>
@@ -83,7 +83,7 @@
     </p>
 
     <p>
-      Payment for the helicopter is usually cash only and costs $150-$200 per person depending on numbers.
+      Payment for the helicopter is usually $150-$200 per person depending on numbers.
       If that's a bit spendy, you can self-propel from the bottom to meet the rest of us.
       No judgement, it will still be a good adventure.
     </p>
@@ -116,16 +116,15 @@
 
     <p>
       Renwick is around 15 minutes drive from camp for modest supplies of food and fuel.
-      We will also pass through Havelock twice one of the days.
       No Nelson visits this year.
     </p>
 
     <h3>Safety ⛑</h3>
 
     <p class="indent">☝️ Nothing has ever gone wrong at Richmond Roulette.</p>
-    <p class="indent">🦴 Over the years we have not had multiple fractures or dislocations.</p>
+    <p class="indent">🦴 Over the years we have not had bone fractures or dislocations.</p>
     <p class="indent">🧠 We have never had any concussions.</p>
-    <p class="indent">🚁 We have not had multiple emergency helicopter rescues.</p>
+    <p class="indent">🚁 We have not had emergency helicopter rescues.</p>
     <p class="indent">🌊 The rivers have never risen and blocked our route.</p>
     <p class="indent">🐝 No-one has been stung by wasps or drained of their blood by sand flies.</p>
 
@@ -142,7 +141,7 @@
     <p>
       Our biggest hazards are gravity and the weather.
       Do bring some first-aid gear.
-      Being self-sufficient is good but between us all we will have various first aid kits, first aid experience, and a few PLBs.
+      Being self-sufficient is good but between us all we will have various first aid gear, experience, and a few PLBs.
       A waterproof jacket is probably the most important piece of safety kit in the high country.
       Waterproof pants are good too.
     </p>
@@ -160,7 +159,7 @@
         <li><a href="index.html">Home</a></li>
         <li class="active">How it works</li>
         <li><a href="who.html">Heroes</a></li>
-        <li><a href="index.html">Register</a></li>
+        <li><a href="https://forms.gle/fTKSrQ9sU6TCusGd9" target="_blank" rel="noopener">Register</a></li>
       </ul>
     </div>
   </body>
