--- a/who.html
+++ b/who.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>RR23</title>
+    <title>RR24</title>
     <link href="assets/stylesheets/rr.css" rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="assets/images/favicon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -14,7 +14,7 @@
     <script>jQuery(function($) {$('.slider').sss();});</script>
   </head>
   <body class="who">
-    <h2>Last years MVPs (mentally variable people?)</h2>
+    <h2>Previous MVPs (mentally variable people?)</h2>
 
     <div class="slider">
       <div class="hero">
@@ -173,7 +173,7 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="how.html">How it works</a></li>
         <li class="active">Heroes</li>
-        <li><a href="index.html">Register</a></li>
+        <li><a href="https://forms.gle/fTKSrQ9sU6TCusGd9" target="_blank" rel="noopener">Register</a></li>
       </ul>
     </div>
   </body>
