--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>RR23</title>
+    <title>RR24</title>
     <link href="assets/stylesheets/rr.css" rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="assets/images/favicon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -13,32 +13,26 @@
   <body class="home">
     <img src="assets/images/logo.png" class="logo">
 
-    <h1 id="colour-me-baby">Richmond<br>Roulette<br>23</h1>
+    <h1 id="colour-me-baby">Richmond<br>Roulette<br>24</h1>
 
     <div class="details-container">
       <div class="details">
         <div class="what">
           <h2 class="register">
-            <div class="nowrap">4-10 Feb<span class="hide-small">ruary</span> <span class="hide-small">20</span>23</div>
-            <div class="nowrap ml-auto">➪ <a href="index.html">Register</a></div>
+            <div class="nowrap">25-28 Apr<span class="hide-small">il</span> <span class="hide-small">20</span>24</div>
+            <div class="nowrap ml-auto">➪ <a href="https://forms.gle/fTKSrQ9sU6TCusGd9" target="_blank" rel="noopener">Register</a></div>
           </h2>
           <p>
-            Biggish day trips into the beautiful Richmond Ranges.
+            Biggish day trips into the beautiful Richmond Ranges.<br>
             With niche humans.
             And bicycles.
-            For seven days *.<br>
+            For four days or so.
+          </p>
+          <p>
             100% social.
             100% adventure.
             80% fun.
           </p>
-          <em class="show-small">
-            * or fewer, your call :)
-          </em>
-          <em class="hide-small">
-            * Are you beech forest curious?
-            Toe-dipping is ok.
-            Come for a day, or three, or the full seven, or have rest days, whatever :)
-          </em>
         </div>
       </div>
     </div>
@@ -48,7 +42,7 @@
         <li class="active">Home</li>
         <li><a href="how.html">How it works</a></li>
         <li><a href="who.html">Heroes</a></li>
-        <li><a href="index.html">Register</a></li>
+        <li><a href="https://forms.gle/fTKSrQ9sU6TCusGd9" target="_blank" rel="noopener">Register</a></li>
       </ul>
     </div>
   </body>
