--- a/how.html
+++ b/how.html
@@ -159,7 +159,7 @@
         <li><a href="index.html">Home</a></li>
         <li class="active">How it works</li>
         <li><a href="who.html">Heroes</a></li>
-        <li><a href="https://forms.gle/fTKSrQ9sU6TCusGd9" target="_blank" rel="noopener">Register</a></li>
+        <li><a href="https://www.instagram.com/p/C466BgXBXms/" target="_blank" rel="noopener">Sorry</a></li>
       </ul>
     </div>
   </body>
