--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="what">
           <h2 class="register">
             <div class="nowrap">25-28 Apr<span class="hide-small">il</span> <span class="hide-small">20</span>24</div>
-            <div class="nowrap ml-auto">➪ <a href="https://forms.gle/fTKSrQ9sU6TCusGd9" target="_blank" rel="noopener">Register</a></div>
+            <div class="nowrap ml-auto">➪ <a href="https://www.instagram.com/p/C466BgXBXms/" target="_blank" rel="noopener">Sorry</a></div>
           </h2>
           <p>
             Biggish day trips into the beautiful Richmond Ranges.<br>
@@ -42,7 +42,7 @@
         <li class="active">Home</li>
         <li><a href="how.html">How it works</a></li>
         <li><a href="who.html">Heroes</a></li>
-        <li><a href="https://forms.gle/fTKSrQ9sU6TCusGd9" target="_blank" rel="noopener">Register</a></li>
+        <li><a href="https://www.instagram.com/p/C466BgXBXms/" target="_blank" rel="noopener">Sorry</a></li>
       </ul>
     </div>
   </body>
